--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
     <meta name="theme-color" content="#D3D3D3" />
-    <title>FS-App-Template</title>
+    <title>Lift the World</title>
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
     <link rel="manifest" href="/manifest.json" />
